Width fixes for narrow displays
Performance info and block-region borders both caused horizontal scroll.

--- a/style/core.css
+++ b/style/core.css
@@ -200,7 +200,8 @@ div.moodle-dialogue-base {position:absolute;top:0;left:0;right:0;z-index:1500;}
 #back-to-top a {text-decoration: none;border: 0;outline: none;}
 /* PerformanceInfo
 -------------------------- */
-#page-footer .performanceinfo{-moz-border-radius-topleft:15px;-moz-border-radius-topright:15px;-webkit-border-top-left-radius:15px 15px;-webkit-border-top-right-radius:15px 15px;border-radius:15px 15px 0 0;bottom:0;left:-290px !important;position:fixed;background-color:#222;width:580px !important;border-width:12px 12px medium;margin:0 50% !important;z-index:400;}
+/*#page-footer .performanceinfo{-moz-border-radius-topleft:15px;-moz-border-radius-topright:15px;-webkit-border-top-left-radius:15px 15px;-webkit-border-top-right-radius:15px 15px;border-radius:15px 15px 0 0;bottom:0;left:-290px !important;position:fixed;background-color:#222;width:100%;max-width:580px;border-width:12px 12px medium;margin:0 50% !important;z-index:400;}*/
+#page-footer .performanceinfo{border-radius:15px 15px 0 0;bottom:0;left:-290px;position:fixed;background-color:#222;width:580px;border-width:12px 12px medium;margin:0 50%;z-index:400;}
 #page-footer .performanceinfo ul {text-align: center; margin: 0 auto;}
 #page-footer .performanceinfo li{display:block;list-style-type:none;float:left;padding:5px 0;width:25%;}
 #page-footer .performanceinfo li var{font-size:1.3em;font-weight:700;}
@@ -311,7 +312,7 @@ body#page-question-category.decaf_with_edit_buttons.jsenabled div.box.questionca
 	#block-region-side-pre, #block-region-side-post {padding:0 4px;}
 	.block-region .block .content {padding:5px 0;}
 	#page-footer{margin-bottom:0;}
-	#page-footer .performanceinfo{position:relative;}
+	#page-footer .performanceinfo{position:relative;width:100%;margin:0;left:0;}
 	#page-footer .performanceinfo li{margin-top:10px;}
 	#page-footer .performanceinfo span{color:#000;}
 }
@@ -319,4 +320,5 @@ body#page-question-category.decaf_with_edit_buttons.jsenabled div.box.questionca
 	#page{margin:0 -20px;}
 	#page #region-main.pull-right{padding:0 20px;}
 	#block-region-side-pre, #block-region-side-post {padding:0 20px;}
+	#block-region-side-pre, #block-region-side-post, #block-region-side-pre:before, #block-region-side-post:before {border-width:0;}
 }
